@@ -9,6 +9,7 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 - Update to requests 2.21.0
 - Add very large stdin streaming support
 - Fix man page output to properly break on carriage return character from hcli-document json
+- Removed EXAMPLES section sequence constraint on COMMANDS and OPTIONS output
 
 ## [2.2.0]
 - Switched to huckle cli ls from huckle cli list for brevity
